<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

 >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/continue_button"
                style="metaButtonBarButtonStyle"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="74dp"
                android:layout_marginRight="74dp"
                android:layout_weight="0.15"
                android:onClick="continueButton"
                android:text="@string/continue_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/difficulty"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/complexity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:max="9" />

            <TextView
                android:id="@+id/pathLen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Generation Type" />

                <Spinner
                    android:id="@+id/random_gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_gen"
                    android:entries="@array/main_generation_array" />

            <Spinner
                android:id="@+id/algorithm"
                style="?android:attr/spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp" 
                android:entries="@array/generation_random_array"/>

            <TextView
                android:id="@+id/pathNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Robot Type" />

            <Spinner
                android:id="@+id/driver"
                style="?android:attr/spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/robot_operation_array" />
            
            <Button
        		android:id="@+id/buttonSave"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_alignParentBottom="true"
        		android:layout_centerHorizontal="true"
        		android:onClick="goToSaveIt"
        		android:text="Save as File" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>